--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='TomsApp'>
   <head>
     <title>Test Task for Daniel</title>
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body>
-    <h1>Test</h1>
+    <div ng-view=''></div>
+    <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js'></script>
+    <script src='js/app.min.js'></script>
+    <script src='http://localhost:35729/livereload.js'></script>
   </body>
 </html>
