Add the third page

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link href='css/style.css' rel='stylesheet'>
   </head>
   <body>
-    <div ng-view=''></div>
+    <div class='main' ng-view=''></div>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js'></script>
