--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html ng-app='TomsApp'>
   <head>
+    <meta charset='utf-8'>
+    <meta content='width=device-width, initial-scale=1.0' name='viewport'>
     <title>Test Task for Daniel</title>
     <link href='css/style.css' rel='stylesheet'>
+    <link href='css/vendor/bootstrap.min.css' rel='stylesheet'>
+    <link href='css/vendor/bootstrap-theme.min.css' rel='stylesheet'>
+    <!--[if lt IE 9]><script src="js/vendor/html5shiv.js"></script><script src="js/vendor/respond.min.js"></script><![endif]-->
   </head>
   <body>
-    <div class='main' ng-view=''></div>
+    <div class='navbar navbar-fixed-top navbar-inverse' role='navigation'>
+      <div class='container'>
+        <div class='navbar-header'>
+          <a class='navbar-brand' href='#'>Project name</a>
+        </div>
+        <div class='collapse navbar-collapse'>
+          <ul class='nav navbar-nav'>
+            <li class='active'>
+              <a href='#'>Home</a>
+            </li>
+            <li>
+              <a href='#about'>About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class='container'>
+      <div class='row row-offcanvas row-offcanvas-right'>
+        <div class='col-xs-12 col-sm-9'>
+          <div ng-view=''></div>
+        </div>
+        <div class='col-xs-6 col-sm-3 sidebar-offcanvas' id='sidebar' role='navigation'>
+          <div class='well sidebar-nav'>
+            <ul class='nav'>
+              <li>Sidebar</li>
+              <li class='active'>
+                <a href='#'>Link</a>
+              </li>
+              <li>
+                <a href='#'>Link</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <hr>
+      <footer>
+        <p>&copy; Company 2013</p>
+      </footer>
+    </div>
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js'></script>
