--- a/src/main.html
+++ b/src/main.html
@@ -1,6 +1,48 @@
-<p>test</p>
-<p>{{name}}</p>
-<p>{{surname}}</p>
-<a href='/page1'>Page 1</a>
-<a href='/page2'>Page 2</a>
-<a href='/page3'>Page 3</a>
+<div class='jumbotron'>
+  <h1>Hello, world!</h1>
+  <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+</div>
+<div class='row'>
+  <div class='col-6 col-sm-6 col-lg-4'>
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>
+      <a class='btn btn-default' href='#'>View details &raquo;</a>
+    </p>
+  </div>
+  <div class='col-6 col-sm-6 col-lg-4'>
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>
+      <a class='btn btn-default' href='#'>View details &raquo;</a>
+    </p>
+  </div>
+  <div class='col-6 col-sm-6 col-lg-4'>
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>
+      <a class='btn btn-default' href='#'>View details &raquo;</a>
+    </p>
+  </div>
+  <div class='col-6 col-sm-6 col-lg-4'>
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>
+      <a class='btn btn-default' href='#'>View details &raquo;</a>
+    </p>
+  </div>
+  <div class='col-6 col-sm-6 col-lg-4'>
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>
+      <a class='btn btn-default' href='#'>View details &raquo;</a>
+    </p>
+  </div>
+  <div class='col-6 col-sm-6 col-lg-4'>
+    <h2>Heading</h2>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.</p>
+    <p>
+      <a class='btn btn-default' href='#'>View details &raquo;</a>
+    </p>
+  </div>
+</div>
