Set active menu item, add the controller for the homepage and put the bootsrap button for toggle the menu

--- a/src/main.html
+++ b/src/main.html
@@ -1,6 +1,6 @@
 <div class='jumbotron'>
-  <h1>Hello, world!</h1>
-  <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
+  <h1>{{pageTitle}}</h1>
+  <p>{{bannerText}}</p>
 </div>
 <div class='row'>
   <div class='col-6 col-sm-6 col-lg-4'>
