--- a/src/index.html
+++ b/src/index.html
@@ -13,15 +13,26 @@
     <div class='navbar navbar-fixed-top navbar-inverse' role='navigation'>
       <div class='container'>
         <div class='navbar-header'>
-          <a class='navbar-brand' href='#'>Project name</a>
+          <button class='navbar-toggle' data-target='.navbar-collapse' data-toggle='collapse' type='button'>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+            <span class='icon-bar'></span>
+          </button>
+          <a class='navbar-brand' href='/'>Test task</a>
         </div>
         <div class='collapse navbar-collapse'>
-          <ul class='nav navbar-nav'>
-            <li class='active'>
-              <a href='#'>Home</a>
+          <ul class='nav navbar-nav' ng-controller='NavCtrl'>
+            <li ng-class="setActiveClass('/')">
+              <a href='/'>Home</a>
             </li>
-            <li>
-              <a href='#about'>About</a>
+            <li ng-class="setActiveClass('/page1')">
+              <a href='/page1'>Page 1</a>
+            </li>
+            <li ng-class="setActiveClass('/page2')">
+              <a href='/page2'>Page 2</a>
+            </li>
+            <li ng-class="setActiveClass('/page3')">
+              <a href='/page3'>Page 3</a>
             </li>
           </ul>
         </div>
@@ -29,18 +40,28 @@
     </div>
     <div class='container'>
       <div class='row row-offcanvas row-offcanvas-right'>
-        <div class='col-xs-12 col-sm-9'>
-          <div ng-view=''></div>
-        </div>
-        <div class='col-xs-6 col-sm-3 sidebar-offcanvas' id='sidebar' role='navigation'>
+        <div class='col-md-2' id='sidebar-left' role='navigation'>
           <div class='well sidebar-nav'>
             <ul class='nav'>
-              <li>Sidebar</li>
-              <li class='active'>
-                <a href='#'>Link</a>
+              <li>Left Sidebar</li>
+              <li>
+                <a href='/page1'>Page 1</a>
               </li>
               <li>
-                <a href='#'>Link</a>
+                <a href='/page2'>Page 2</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class='col-md-8'>
+          <div ng-view=''></div>
+        </div>
+        <div class='col-md-2' id='sidebar-right' role='navigation'>
+          <div class='well sidebar-nav'>
+            <ul class='nav'>
+              <li>Right Sidebar</li>
+              <li>
+                <a href='/page3'>Page 3</a>
               </li>
             </ul>
           </div>
@@ -54,6 +75,7 @@
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js'></script>
+    <script src='js/vendor/bootstrap.min.js'></script>
     <script src='js/app.min.js'></script>
     <script src='http://localhost:35729/livereload.js'></script>
   </body>
