Remove livereload js; add the touch library for Angular

--- a/src/index.html
+++ b/src/index.html
@@ -75,8 +75,8 @@
     <script src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular.min.js'></script>
     <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-route.min.js'></script>
+    <script src='http://ajax.googleapis.com/ajax/libs/angularjs/1.2.6/angular-touch.min.js'></script>
     <script src='js/vendor/bootstrap.min.js'></script>
     <script src='js/app.min.js'></script>
-    <script src='http://localhost:35729/livereload.js'></script>
   </body>
 </html>
